[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Actors/Battle/BattleActor.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Actors/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Actors/Battle/BaseActors/NameDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Actors/Selector Arrow.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Actors/DustParticles.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=2]
resource_local_to_scene = true
margin = 0.001
radius = 0.32
height = 0.01

[node name="BattleActor" instance=ExtResource( 1 )]
collision_layer = 0
script = ExtResource( 2 )
dust_particles = ExtResource( 6 )

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 2 )

[node name="SelectorArrow" type="Sprite3D" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
billboard = 2
texture = ExtResource( 5 )

[node name="NameDisplay" parent="SelectorArrow" index="0" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="ProjectileTargetPoint" type="Position3D" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.32, 0 )

[node name="ProjectileSpawnPoint" type="Position3D" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.32, 0 )

[node name="HealthBar" parent="." index="8" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
